2019-01-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Display nodetype validation error when property is missing, resolves #76
	* Update documentation to mention restriction on crdate, tstamp and cruser_id fields, resolves #71

2018-10-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected saving of Scheduler tasks, resolves #72

2018-08-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to handle deep structures and denormalise on the fly, resolves #67

2018-08-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added basic time-tracking feature, resolves #65
	* Refactored StoreDataStep class, resolves #66

2018-08-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Caught exceptions happening during DataHandler operations, resolves #63

2018-08-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added preview feature, resolves #61

2018-07-10 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added custom permissions for BE module, resolves #49

2018-07-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added property for fetching value from multi-dimensional array, resolves #52

2018-07-01 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility to group configurations, resolves #48

2018-06-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Used ConfigurationRepository in Scheduler task list of additional fields, resolves #40
	* Improved the reporting utility, resolves #31

2018-06-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed Log module logic to load data from the server, resolves #53

2018-06-11 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added debugging on the command-line, resolves #59

2018-05-06 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added context to Importer calls and log entries, resolves #27

2018-03-25 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Reviewed the UidRepository class, resolves #39

2018-03-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>
